# OpenGL_Synthese_Image

./: CMakeLists.txt  README.md
Rollercoaster/: main.cpp
Rollercoaster/assets/textures/: frozencube.mtl  grass.mtl  merry.mtl
Rollercoaster/shaders/: 3D.vs.glsl  cubelight.fs.glsl  directionallight.fs.glsl  lune.fs.glsl  lune.vs.glsl
glimac/glimac/: Cone.hpp  FreeflyCamera.hpp  Mesh.hpp  Moon.hpp  MoonProgramDraw.hpp  Sphere.hpp  SphereProgramDraw.hpp  TrackballCamera.hpp  TrailProgram..hpp  model.hpp  spline.hpp
glimac/src/: Program.cpp  Shader.cpp
